// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API endpoints Issue create 1`] = `
{
  "comments": [
    {
      "body": "Comment body",
      "id": 1,
      "issue_id": 1,
    },
  ],
  "id": 1,
  "number": "1",
  "repo": [
    {
      "description": "Repo 1 description",
      "id": 1,
      "is_public": true,
      "latest_num": 1,
      "name": "Repo 1",
      "org_id": 1,
      "slug": "repo1",
    },
  ],
  "title": "Issue 1",
}
`;

exports[`API endpoints Org create 1`] = `
{
  "description": "Org NEW description",
  "id": 4,
  "name": "Org NEW",
  "nameAndDesc": "Org NEW: Org NEW description",
  "slug": "orgNEW",
  "summary": "Org NEWOrg NEW description",
}
`;

exports[`API endpoints Org get 1`] = `
{
  "description": "Org 1 description",
  "id": 1,
  "name": "Org 1",
  "nameAndDesc": "Org 1: Org 1 description",
  "slug": "org1",
  "summary": "Org 1Org 1 description",
}
`;

exports[`API endpoints Org list 1`] = `
[
  {
    "description": "Org 1 description",
    "id": 1,
    "name": "Org 1",
    "nameAndDesc": "Org 1: Org 1 description",
    "slug": "org1",
    "summary": "Org 1Org 1 description",
  },
  {
    "description": "Org 2 description",
    "id": 2,
    "name": "Org 2",
    "nameAndDesc": "Org 2: Org 2 description",
    "slug": "org2",
    "summary": "Org 2Org 2 description",
  },
  {
    "description": "Org 3 description",
    "id": 3,
    "name": "Org 3",
    "nameAndDesc": "Org 3: Org 3 description",
    "slug": "org3",
    "summary": "Org 3Org 3 description",
  },
]
`;

exports[`API endpoints Org update 1`] = `
{
  "description": "Org 2A description",
  "id": 2,
  "name": "Org 2A",
  "nameAndDesc": "Org 2A: Org 2A description",
  "slug": "org2",
  "summary": "Org 2AOrg 2A description",
}
`;

exports[`API endpoints Repo create 1`] = `
{
  "description": "Description: Repo 6 description",
  "id": 6,
  "org_id": 1,
  "slug": "org_1-W5JU1e0Kj1Kv",
}
`;

exports[`API endpoints Repo get 1`] = `
{
  "description": "Repo 1 description",
  "id": 1,
  "org_id": 1,
  "slug": "repo1",
}
`;

exports[`API endpoints Repo list 1`] = `
[
  {
    "description": "Repo 1 description",
    "id": 1,
    "org_id": 1,
    "slug": "repo1",
  },
  {
    "description": "Repo 2 description",
    "id": 2,
    "org_id": 1,
    "slug": "repo2",
  },
  {
    "description": "Repo 3 description",
    "id": 3,
    "org_id": 1,
    "slug": "repo3",
  },
]
`;

exports[`API endpoints Repo update 1`] = `
{
  "description": "Repo 2A description",
  "id": 2,
  "org_id": 1,
  "slug": "repo2",
}
`;
